k8s/Imm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immovables-serverside-ingress
  namespace: ns-immovables
  annotations:
    kubernetes.io/ingress.class: 'nginx'

spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
  rules:
  - host: opyter.iptime.org
    http:
      paths:
      - path: /immovables/*
        pathType: Prefix
        backend:
          service:
            name: immovables-serverside
            port:
              number: 80
